Fixed alignment

--- a/src/app/name-format/name-format.component.css
+++ b/src/app/name-format/name-format.component.css
@@ -1,4 +1,5 @@
 .alignLetters {
     display: flex;
     flex-direction: column;
+    overflow: auto;
 }
